--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
 
         <div class="col-lg-6">
-          <img class="title-image" src="/images/iphone6.png" alt="iphone-mockup">
+          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
         </div>
 
       </div>
@@ -115,7 +115,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
           <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-          <img class="testimonial-image" src="/images/dog-img.jpg" alt="dog-profile">
+          <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item container-fluid">
